Closed Bug 349790 Opened 19 years ago Closed 19 years ago

Filepicker crashes.

Categories

(Core :: Widget: Gtk, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jst, Assigned: jst)

References

Details

(Keywords: fixed1.8.0.9, fixed1.8.1)

Attachments

(1 file)

Since bug 341218 was fixed I've been seeing a reliable crash in the file picker on Fedora Core 4. I dug into it, and found the problem in the code and came up with a fix. The problem is that nsFilePicker::LoadSymbolsGTK24() marks itself initialized even if the initialization fails, and leaves function pointers set to null that are later on expected to be callable. Patch coming up.
Attachment #235022 - Flags: superreview?(roc)
Attachment #235022 - Flags: superreview+
Attachment #235022 - Flags: review?(roc)
Attachment #235022 - Flags: review+
Fix landed on the trunk.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment on attachment 235022 [details] [diff] [review] Properly deal with gtk_file_chooser_set_do_overwrite_confirmation not existing. nominating together with fix for bug 341218
Attachment #235022 - Flags: approval1.8.1?
Comment on attachment 235022 [details] [diff] [review] Properly deal with gtk_file_chooser_set_do_overwrite_confirmation not existing. a=schrep for drivers
Attachment #235022 - Flags: approval1.8.1? → approval1.8.1+
Comment on attachment 235022 [details] [diff] [review] Properly deal with gtk_file_chooser_set_do_overwrite_confirmation not existing. Distros should get this patch along with 341218
Attachment #235022 - Flags: approval1.8.0.10?
Comment on attachment 235022 [details] [diff] [review] Properly deal with gtk_file_chooser_set_do_overwrite_confirmation not existing. Distros should get this patch along with 341218
Attachment #235022 - Flags: approval1.8.0.9?
Attachment #235022 - Flags: approval1.8.0.10?
Comment on attachment 235022 [details] [diff] [review] Properly deal with gtk_file_chooser_set_do_overwrite_confirmation not existing. Approved for 1.8.0 branch, a=jay for drivers.
Attachment #235022 - Flags: approval1.8.0.9? → approval1.8.0.9+
Assignee: nobody → jst
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: