Fixing bug 349790. Make the file picker not fail if some optional function symbols can't be found in the GTK libraries on the system. r+sr=roc@ocallahan.org.